--- a/src/Page/About/AfterClick/AfterClick.module.css
+++ b/src/Page/About/AfterClick/AfterClick.module.css
@@ -200,7 +200,9 @@
     
     .imgDes img {
 
-        padding: 0 40px;
+        padding: 0 60px;
+        width: 80%;
+        height: 70%;
 
     }
     .CerQuaCon {
